Add missing C flags for compiling C++ modules for a shared library.

--- a/lib/pffc/GNUmakefile
+++ b/lib/pffc/GNUmakefile
@@ -92,7 +92,7 @@ MACRO_LIST_FILE = $(LIST_NAME)_macro_list
 DEP_LIST_FILE = $(LIST_NAME)_dep_list
 
 CFLAGS = $(CFLAGS_ALL) $(CFLAGS_OD) $(CFLAGS_SHR) $(CFLAGS_ANSI)
-CXXFLAGS += $(CXXFLAGS_ALL) $(CXXFLAGS_OD) $(C_INCDIRS)
+CXXFLAGS += $(CXXFLAGS_ALL) $(CXXFLAGS_OD) $(CFLAGS_SHR) $(C_INCDIRS)
 CPPFLAGS = $(CFLAGS_SYS) $(CPP_OPTS)
 DEP_INCDIRS = $(C_INCDIRS)
 
