Move the $(SYSLIB) macro to LIBS, where it belongs.

--- a/lib/pffc/tools/GNUmakefile
+++ b/lib/pffc/tools/GNUmakefile
@@ -77,11 +77,11 @@ else
 endif
 
 LIBRARY = $(LIBDEST)/lib$(PRODNAME)$(DBG_EXT).a
-LIBRARY_LINK = -L$(LIBDEST) -l$(PRODNAME)$(DBG_EXT) $(SYSLIB)
+LIBRARY_LINK = -L$(LIBDEST) -l$(PRODNAME)$(DBG_EXT)
 
 C_INCDIRS = $(STL_INC) -I$(HERMES_LIB)/pffc
 DEP_INCDIRS = -I$(HERMES_LIB)/pffc
-LIBS = -L$(LIBDIR) -lpffc -lm
+LIBS = -L$(LIBDIR) -lpffc -lm $(SYSLIB)
 
 CFLAGS += $(CFLAGS_ALL) $(CFLAGS_OD) $(C_INCDIRS)
 CXXFLAGS += $(CXXFLAGS_ALL) $(CXXFLAGS_OD) $(C_INCDIRS)
