--- a/lib/pff/GNUmakefile
+++ b/lib/pff/GNUmakefile
@@ -44,7 +44,8 @@ BLD_SRC_EXTS = -sF -sf -sc
 BLD_INC_EXTS = -iinc
 LGRPFLAGS = 
 WINLGRPFLAGS = 
-LIBBASE = ..
+DBGLIBBASE = 
+SHRLIBBASE = 
 FFLAGS_OD = $(FFLAGS_OPT)
 CFLAGS_OD = $(CFLAGS_OPT)
 FFLAGS_SHR = 
@@ -64,7 +65,7 @@ endif
 ifneq ($(strip $(DEBUG)),)
   FFLAGS_OD = $(FFLAGS_DBG)
   CFLAGS_OD = $(CFLAGS_DBG)
-  LIBBASE = ../debug
+  DBGLIBBASE = /debug
 endif
 
 ifneq ($(strip $(STATIC)),)
@@ -78,6 +79,7 @@ endif
 ifneq ($(strip $(SHARED)),)
   FFLAGS_SHR = $(SHR_FFLAGS)
   CFLAGS_SHR = $(SHR_CFLAGS)
+  SHRLIBBASE = /shared
   # check if this platform supports shared libraries
   ifeq ($(strip $(SHR_EXT)),)
     GOOD2GO = no
@@ -98,6 +100,7 @@ FFLAGS_FPP = $(FFLAGS_SYS) $(F_OPTS)
 DEP_INCDIRS = $(C_INCDIRS) $(F_INCDIRS)
 
 LIBDIRNAME = $(PLATFORM)
+LIBBASE = ..$(SHRLIBBASE)$(DBGLIBBASE)
 LIBDIR  = $(LIBBASE)/$(LIBDIRNAME)
 LIBRARY = $(LIBDIR)/lib$(PRODNAME).a
 SHR_LIB = $(LIBDIR)/lib$(PRODNAME).$(SHR_EXT)
