--- a/lib/pff/GNUmakefile
+++ b/lib/pff/GNUmakefile
@@ -45,7 +45,6 @@ BLD_INC_EXTS = -iinc
 LGRPFLAGS = 
 WINLGRPFLAGS = 
 DBGLIBBASE = 
-SHRLIBBASE = 
 FFLAGS_OD = $(FFLAGS_OPT)
 CFLAGS_OD = $(CFLAGS_OPT)
 FFLAGS_SHR = 
@@ -76,10 +75,17 @@ ifneq ($(strip $(STATIC)),)
   LGRPFLAGS = -ndynamic
 endif
 
+PIC_EXT = 
+ifneq ($(strip $(PIC)),)
+  FFLAGS_SHR = $(SHR_FFLAGS)
+  CFLAGS_SHR = $(SHR_CFLAGS)
+  PIC_EXT = _pic
+endif
+
 ifneq ($(strip $(SHARED)),)
   FFLAGS_SHR = $(SHR_FFLAGS)
   CFLAGS_SHR = $(SHR_CFLAGS)
-  SHRLIBBASE = /shared
+  PIC_EXT = _pic
   # check if this platform supports shared libraries
   ifeq ($(strip $(SHR_EXT)),)
     GOOD2GO = no
@@ -100,14 +106,14 @@ FFLAGS_FPP = $(FFLAGS_SYS) $(F_OPTS)
 DEP_INCDIRS = $(C_INCDIRS) $(F_INCDIRS)
 
 LIBDIRNAME = $(PLATFORM)
-LIBBASE = ..$(SHRLIBBASE)$(DBGLIBBASE)
+LIBBASE = ..$(DBGLIBBASE)
 LIBDIR  = $(LIBBASE)/$(LIBDIRNAME)
-LIBRARY = $(LIBDIR)/lib$(PRODNAME).a
-SHR_LIB = $(LIBDIR)/lib$(PRODNAME).$(SHR_EXT)
+LIBRARY = $(LIBDIR)/lib$(PRODNAME)$(PIC_EXT).a
+SHR_LIBDIR = ../shared$(DBGLIBBASE)/$(LIBDIRNAME)
+SHR_LIB = $(SHR_LIBDIR)/lib$(PRODNAME).$(SHR_EXT)
 
 TARGET = $(LIBRARY)
 ifneq ($(strip $(SHARED)),)
-  LIBRARY = $(LIBDIR)/lib$(PRODNAME)_shr.a
   TARGET = $(SHR_LIB)
 endif
 
@@ -130,38 +136,45 @@ ifneq ($(strip $(wildcard $(MACRO_LIST_FILE))),)
   include $(MACRO_LIST_FILE)
 endif
 
-.PHONY : first target DEBUG dbg STATIC static SHARED shared $(HERMES_ARCH_LIST)
-.PHONY : help bld_macro_list depend nmakedepend
+.PHONY : first target DEBUG dbg STATIC static SHARED shared PIC pic
+.PHONY : $(HERMES_ARCH_LIST) help bld_macro_list depend nmakedepend
 #
 #--------------------------- Target Section -----------------------------
 #
 
 ifeq ($(strip $(GOOD2GO)),no)
-first target DEBUG dbg STATIC static SHARED shared $(HERMES_ARCH_LIST) :
+first target DEBUG dbg STATIC static SHARED shared PIC pic $(HERMES_ARCH_LIST) :
 	@echo $(ERR_MSG)
 else
 first :
 	@$(MAKE) PLATFORM=$(PLATFORM) DEBUG=$(DEBUG) SHARED=$(SHARED) \
-	         STATIC=$(STATIC) depend $(LIBDIR)
+	         PIC=$(PIC) STATIC=$(STATIC) depend $(LIBDIR)
 	@$(MAKE) PLATFORM=$(PLATFORM) DEBUG=$(DEBUG) SHARED=$(SHARED) \
-	         STATIC=$(STATIC) target
+	         PIC=$(PIC) STATIC=$(STATIC) target
 
 target :
 	@$(MAKE) -f $(MAKEFILE) DEBUG=$(DEBUG) SHARED=$(SHARED) \
-	         STATIC=$(STATIC) $(TARGET)
+	         PIC=$(PIC) STATIC=$(STATIC) $(TARGET)
 
 DEBUG dbg :
-	@$(MAKE) -f $(MAKEFILE) DEBUG=1 SHARED=$(SHARED) STATIC=$(STATIC) first
+	@$(MAKE) -f $(MAKEFILE) DEBUG=1 SHARED=$(SHARED) PIC=$(PIC) \
+		 STATIC=$(STATIC) first
 
 STATIC static :
-	@$(MAKE) -f $(MAKEFILE) STATIC=1 DEBUG=$(DEBUG) SHARED=$(SHARED) first
+	@$(MAKE) -f $(MAKEFILE) STATIC=1 DEBUG=$(DEBUG) SHARED=$(SHARED) \
+		 PIC=$(PIC) first
+
+PIC pic :
+	@$(MAKE) -f $(MAKEFILE) STATIC=$(STATIC) DEBUG=$(DEBUG) SHARED= PIC=1 \
+		 first
 
 SHARED shared :
-	@$(MAKE) -f $(MAKEFILE) SHARED=1 DEBUG=$(DEBUG) STATIC=$(STATIC) first
+	@$(MAKE) -f $(MAKEFILE) SHARED=1 DEBUG=$(DEBUG) PIC= \
+		 STATIC=$(STATIC) first
 
 $(HERMES_ARCH_LIST) :
 	@$(MAKE) -f $(MAKEFILE) PLATFORM=$@ DEBUG=$(DEBUG) STATIC=$(STATIC) \
-	        SHARED=$(SHARED) first
+	         PIC=$(PIC) SHARED=$(SHARED) first
 endif
 
 $(LIBDIR) :
@@ -173,6 +186,7 @@ help :
 	@echo "  make                    Builds optimized, dynamic-memory version"
 	@echo "  make debug              Builds debug, dynamic-memory version"
 	@echo "  make static             Builds optimized, static-memory version"
+	@echo "  make pic                Builds library with position-independent code"
 	@echo "  make shared             Builds optimized, dynamic-memory shared library"
 	@echo "  \"arch\"                  Cross-compiles and cross-links for the architecture"
 	@echo "                          \"arch\", where \"arch\" is one of the following:"
@@ -181,8 +195,9 @@ help :
 	@echo "  make STATIC=1 depend    Updates dependency files for static-memory version"
 	@echo "  make nmakedepend        Updates NMAKE-compatable dependency files (WIN32)"
 	@echo ""
-	@echo "By adding the macro definitions \"DEBUG=1\", \"STATIC=1\", and/or \"SHARED=1\" to the"
-	@echo "first five options above, the corresponding library permutation will be built."
+	@echo "By adding the macro definitions \"DEBUG=1\", \"STATIC=1\", \"PIC=1\", and/or"
+	@echo "\"SHARED=1\" to the first six options above, the corresponding library"
+	@echo "permutation will be built."
 	@echo ""
 
 ##.SILENT : depend bld_macro_list $(MACRO_LIST_FILE) $(DEP_LIST_FILE)
@@ -209,6 +224,7 @@ $(LIBRARY) : $(OBJS)
 	@echo $(LIBRARY) is now up-to-date
 
 $(SHR_LIB):	$(LIBRARY)
+		@if [ ! -d $(SHR_LIBDIR) ]; then mkdir -p $(SHR_LIBDIR); fi
 		$(AR) x $(LIBRARY)
 		$(FC) $(SHR_LFLAGS) -o $(SHR_LIB) *.o $(LIBS)
 		rm -f *.o
