--- a/lib/tio/GNUmakefile
+++ b/lib/tio/GNUmakefile
@@ -85,7 +85,11 @@ ifneq ($(strip $(IDL)),)
 endif
 
 ifneq ($(strip $(MPI)),)
-  MPI_EXT = _mpi
+  ifeq ($(strip $(MPI_TYPE)),)
+    MPI_EXT = _mpi
+  else
+    MPI_EXT = _$(MPI_TYPE)
+  endif
   CPP_OPTS = -DUSE_MPI
   FPP_OPTS = -DUSE_MPI
   F_OPTS = $(HU_MACRO_DEF)USE_MPI
