Fix parsing of python version from python -V shell command for newe python versions.

--- a/python/extensions/GNUmakefile
+++ b/python/extensions/GNUmakefile
@@ -40,7 +40,7 @@ LGRPFLAGS =
 LIST_NAME = $(PRODUCT)
 MACRO_LIST_FILE = $(LIST_NAME)_macro_list
 DEP_LIST_FILE = $(LIST_NAME)_dep_list
-PY_VER = $(basename $(lastword $(shell python -V 2>&1)))
+PY_VER = $(basename $(word 2,$(shell python -V 2>&1)))
 BLDDIR = $(HERMES_SYS_TYPE)-$(PY_VER)
 HTMLDIR = ../html
 TOOLDIR = ../tools
