This commit primarily includes modifications to support Python version 3. All modules and packages now work for Python versions 2.6 and later. A legacy modules directory (modules2.5) has been added which should work for pre-2.6 versions, although they haven't actually been tested using a pre-2.6 python.
Additionally, several minor errors have been fixed, and some
additional capabilities have been added. New functions include 'filt'
and 'getMean' in pfmpl's 1D tool module, and 'wristr' to its 2D tool
module. New scripts have been added to ensure that python will import
the correct version-appropriate of the pff external module (pff_ext).

--- a/python/GNUmakefile
+++ b/python/GNUmakefile
@@ -36,14 +36,23 @@ MAKEFILE = GNUmakefile
 
 PYC_LIST = $(shell find . -name '*.pyc') 
 
-.PHONY : all extensions ext html clean htmlclean distclean
+ifneq ($(HERMES_PYTHON_TARGETS),)
+  PY_TARGS = $(subst :, ,$(HERMES_PYTHON_TARGETS))
+else
+  PY_TARGS = python
+endif
 
+.PHONY : all extensions ext html clean htmlclean distclean $(PY_TARGS)
 
 all:
-	@cd extensions; $(MAKE);  $(MAKE) html
+	@$(MAKE) $(PY_TARGS)
+	@cd extensions; $(MAKE) html
 
 ext extensions:
-	@cd extensions; $(MAKE)
+	@$(MAKE) $(PY_TARGS)
+
+$(PY_TARGS):
+	@cd extensions; $(MAKE) PYTHON_EXE=$@
 
 html:
 	@cd extensions; $(MAKE) html
